--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Puzzle</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="functions.js" defer></script>
-	<script src="javaScript.js" defer></script>
+	<script src="main.js" defer></script>
 </head>
 <body>
 <img src="img/Puzzle1.png" class="puzzle" onselectstart = "return false" onmousedown = "return false">
